# wiseowlcli

./: .gitignore  ANALYTICS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_V3.md  CLAUDE_CODE_FEATURES.md  CONTRIBUTING.md  CONTRIBUTORS.md  CONVERSATION_TEST.md  Cargo.toml  DEPLOYMENT_STATUS.md  DESIGN_PATTERNS.md  FEATURES_UPDATE.md  FEATURES_V3.md  FINAL_ACHIEVEMENTS.md  FINAL_SUMMARY.md  GITHUB_SETUP.md  IMPROVEMENTS.md  IMPROVEMENT_PLAN.md  LICENSE  MANUAL_TEST.md  Makefile  PERFORMANCE.md  PLANNING_MODE.md  PROJECT_SUMMARY.md  README.md  README_HEADER.md  RELEASE_NOTES.md  ROADMAP.md  STATUS_UPDATE.md  TESTING.md  TEST_SUMMARY.md  chat_demo.py  chat_tester.go  chat_tester.py  chat_tester_gui.py  cleanup.sh  comprehensive_test.sh  hard_test.exp  help_update.txt  (+21 more)
.github/: BRANCHING_STRATEGY.md  WORKFLOWS.md
.github/workflows/: ci.yml  dependencies.yml  pages.yml  performance.yml  qa.yml  release.yml
.ocli/: context.json  mcp_servers.json
.ocli/context/: default.json
.ocli/plans/: current.json
benches/: functional_bench.rs  regression_bench.rs  unit_bench.rs
docs/: CHANGELOG.md  CONTRIBUTING.md  QA_TOOLS.md  _config.yml
src/: build_verifier.rs  cache.rs  context.rs  context_manager.rs  dashboard.rs  dashboard_integration.rs  error_formatter.rs  errors.rs  exporter.rs  git.rs  history.rs  lcars.rs  lcars_tui.rs  lib.rs  main.rs  main.rs.backup  mcp.rs  metrics.rs  multi_file.rs  plan_templates.rs  planning.rs  progress.rs  prompts.rs  readline.rs  stats.rs  streaming.rs  syntax.rs  tools.rs  tui.rs  validator.rs  wiseowl.rs
tests/: README.md  build_verification_test.exp  conversation_test.exp  developer_workflow_test.exp  integration_test.rs  quick_dev_test.exp  run_tests.sh  snapshot_tests.rs
tests/bats/: functional.bats
tests/expect/: test_basic.exp  test_config.exp  test_mcp.exp
wiseowl/: CONTEXT.md  RULES.md  TODO.md
