[package]
name = "ocli"
version = "0.2.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
tokio-fs = "0.1"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.27"
# MCP support
serde_derive = "1.0"
