[package]
name = "ocli"
version = "0.3.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
crossterm = "0.27"
futures-util = "0.3"
rustyline = "13.0"
syntect = "5.0"
indicatif = "0.17"
