[package]
name = "wiseowlcli"

[lib]
edition = "2021"
name = "wiseowlcli"
path = "src/lib.rs"
version = "0.3.2"
authors = ["WiseOwl Tech <contact@wiseowltech.net>"]
description = "Enterprise-grade AI coding assistant with LCARS styling, command history, and multi-model support"
license = "MIT"
repository = "https://github.com/wiseowltechnet/ollama-ocli"
homepage = "https://github.com/wiseowltechnet/ollama-ocli"
documentation = "https://github.com/wiseowltechnet/ollama-ocli#readme"
readme = "README.md"
keywords = ["ollama", "ai", "cli", "coding-assistant", "lcars"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
crossterm = "0.27"
futures-util = "0.3"
rustyline = "13.0"
syntect = "5.0"
indicatif = "0.17"
ratatui = "0.26"
sysinfo = "0.30"
lru = "0.12"

[dev-dependencies]
criterion = "0.5"
insta = "1.34"

[[bench]]
name = "functional_bench"

[[bench]]
name = "unit_bench"
harness = false

[[bench]]
name = "regression_bench"
harness = false
